discussion/kv_engine/175089/175089_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Remove error arg from parse_config()

Change-Id: Ic6e135a801ecf776c07a04e630f0b96f438a0975

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-05-20 13:17:23.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-20 13:49:32.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46265/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc(88): error C3861: "couchstore_last_os_error": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46265/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17611/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:66:23: error: no type named "string_view" in namespace "std" [clang-diagnostic-error]
int parse_config(std::string_view conf, config_item items[]);
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:66:41: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
int parse_config(std::string_view conf, config_item items[]);
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_core_iface.h:70:30: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
                             struct config_item items[]) = 0;
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/engine_testapp/mock_server.cc:128:30: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
                             struct config_item items[]) {
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:19:53: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
static int read_config_file(std::string_view fname, config_item items[]);
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:75:41: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
int parse_config(std::string_view conf, config_item items[]) {
                                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/config_parser.cc:227:53: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
static int read_config_file(std::string_view fname, config_item items[]) {
                                                    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17611/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/config_parser.h:66:23:
error: no type named "string_view" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17611/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38873/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/memcached/config_parser.h:66:23:
error: no type named "string_view" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38873/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19380/ : FAILURE

Compile error at [2022-05-20T13:48:00.943Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: ?couchstore_last_os_error? was not declared in this scope; did you mean ?couchstore_strerror??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19380/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20398/ : FAILURE

Compile error at [2022-05-20T13:48:21.572Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: use of undeclared identifier "couchstore_last_os_error"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20398/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27782/ : FAILURE

Compile error at [2022-05-20T13:48:13.179Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: use of undeclared identifier "couchstore_last_os_error"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27782/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7220/ : FAILURE

Compile error at [2022-05-20T13:45:31.634Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: use of undeclared identifier "couchstore_last_os_error"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7220/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7322/ : FAILURE

Compile error at [2022-05-20T13:28:48.955Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: ?couchstore_last_os_error? was not declared in this scope; did you mean ?couchstore_strerror??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7322/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18586/ : FAILURE

Compile error at [2022-05-20T13:35:06.654Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: use of undeclared identifier "couchstore_last_os_error"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18586/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19729/ : FAILURE

Compile error at [2022-05-20T13:45:51.930Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:88:13:
error: ?couchstore_last_os_error? was not declared in this scope; did you mean ?couchstore_strerror??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19729/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16635/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2022-08-19 08:18:50.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
